// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AWS Error Object 1`] = `
Array [
  Object {
    "err": Object {
      "message": "Ded 3",
      "name": "Error",
      "stack": "Error: Ded 3
    at Object.<anonymous> (<rootDir>/__tests__/aws.test.ts:37:18)
    at Promise.then.completed (<rootDir>/node_modules/jest-circus/build/utils.js:390:28)
    at new Promise (<anonymous>)",
    },
    "hostname": "testhost",
    "level": 50,
    "msg": "Ded 3",
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;

exports[`AWS Lambda Error Object 1`] = `
Array [
  Object {
    "err": Object {
      "message": "Ded 4",
      "name": "Error",
      "stack": "Error: Ded 4
    at Object.<anonymous> (<rootDir>/__tests__/aws.test.ts:28:18)
    at Promise.then.completed (<rootDir>/node_modules/jest-circus/build/utils.js:390:28)
    at new Promise (<anonymous>)",
    },
    "level": 50,
    "msg": "Ded 4",
    "time": 1234567890000,
  },
]
`;

exports[`AWS Lambda Logger + contextId 1`] = `
Array [
  Object {
    "_context": Object {
      "stuff": true,
    },
    "_contextId": "fake-aws-request-id",
    "hostname": "testhost",
    "level": 40,
    "msg": "hello",
    "pid": 1337,
    "time": 1234567890000,
  },
]
`;
